<resources>
    <string name="app_name">EjercicioClase7</string>
    <string name="forgot_password">¿has olvidado la contraseña?</string>
    <string name="main_registro">Registro</string>
    <string name="main_login">Iniciar sesión</string>
    <string name="error_blank_password">¡la contraseña no puede estar vacía!</string>
    <string name="error_blank_username">¡El usuario no puede estar vacío!</string>
    <string name="main_password">Contraseña</string>
    <string name="main_nombre_usuario">Nombre de usuario</string>
    <string name="nombre_registro">Introduzca el nombre</string>
    <string name="email_registro">Introduzca el email</string>
    <string name="contraseña_registro">Introduzca la contraseña</string>
    <string name="rep_contraseña_registro">Repita la contraseña</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="btn_registrar">REGISTRAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_b">BActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>