<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/main_Vguide10"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       app:layout_constraintGuide_percent="0.10"
       />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_Vguide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_Hguide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_olvidar_password"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/main_Hguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        android:text="@string/forgot_password"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_bt_registro"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/main_olvidar_password"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        android:text="@string/main_registro"
        android:textAlignment="center"
        app:icon="@drawable/ic_baseline_person_add_24"
        app:iconPadding="20dp"
        app:iconGravity="end"
        app:cornerRadius="15dp"
        app:strokeColor="@color/color_secundary"
        app:strokeWidth="2dp"
        android:layout_marginBottom="15dp"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_bt_login"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/main_bt_registro"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        android:text="@string/main_login"
        android:textAlignment="center"
        app:icon="@drawable/ic_baseline_login_24"
        app:iconGravity="end"
        app:cornerRadius="15dp"
        app:strokeColor="@color/color_secundary"
        app:strokeWidth="2dp"
        android:layout_marginBottom="15dp"

        />

 <com.google.android.material.textfield.TextInputLayout
     android:id="@+id/main_til_password"
     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     app:layout_constraintBottom_toTopOf="@id/main_bt_login"
     app:layout_constraintStart_toEndOf="@id/main_Vguide10"
     app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
     android:hint="@string/main_password"
     app:errorEnabled="true"
     android:layout_marginBottom="30dp"
     app:endIconMode="password_toggle"
     app:boxStrokeColor="@color/color_secundary"
     app:boxStrokeWidth="2dp"
     app:cornerRadius="30dp"
     app:hintTextColor="@color/color_secundary"
     >
  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/main_tie_password"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:inputType="textPassword"  />
 </com.google.android.material.textfield.TextInputLayout>

 <com.google.android.material.textfield.TextInputLayout
     android:id="@+id/main_til_user"
     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     app:layout_constraintBottom_toTopOf="@id/main_til_password"
     app:layout_constraintStart_toEndOf="@id/main_Vguide10"
     app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
     android:hint="@string/main_nombre_usuario"
     app:endIconMode="clear_text"
     android:layout_marginBottom="15dp"
     app:boxStrokeColor="@color/color_secundary"
     app:boxStrokeWidth="2dp"
     app:cornerRadius="30dp"
     app:hintTextColor="@color/color_secundary"
     >
  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/main_tie_user"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:inputType="textEmailAddress"
       />
 </com.google.android.material.textfield.TextInputLayout>

 <de.hdodenhof.circleimageview.CircleImageView
     android:padding="10dp"
     android:layout_width="0dp"
     android:layout_height="0dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/profile_image"
     android:src="@mipmap/ic_miapp"
     app:civ_border_width="2dp"
     app:civ_border_color="@color/color_secundary"
     app:layout_constraintStart_toEndOf="@id/main_Vguide10"
     app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toTopOf="@id/main_til_user"

     />

</androidx.constraintlayout.widget.ConstraintLayout>