<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_Vguide10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_Vguide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_Hguide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity2TilNombre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        android:hint="@string/nombre_registro"
        app:endIconMode="clear_text"
        android:layout_marginTop="150dp"
        app:boxStrokeColor="@color/color_secundary"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="30dp"
        app:hintTextColor="@color/color_secundary"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity2TieNombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nextFocusDown="@id/activity2TieEmail"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity2TilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity2TilNombre"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        android:hint="@string/email_registro"
        app:endIconMode="clear_text"
        android:layout_marginTop="18dp"
        app:boxStrokeColor="@color/color_secundary"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="30dp"
        app:hintTextColor="@color/color_secundary"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity2TieEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/activity2TieContra"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity2TilContra"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity2TilEmail"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        android:hint="@string/contraseña_registro"
        app:endIconMode="clear_text"
        android:layout_marginTop="18dp"
        app:boxStrokeColor="@color/color_secundary"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="30dp"
        app:hintTextColor="@color/color_secundary"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity2TieContra"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nextFocusDown="@id/activity2TieRepitaContra"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity2TilRepitaContra"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity2TilContra"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        android:hint="@string/rep_contraseña_registro"
        app:endIconMode="clear_text"
        android:layout_marginTop="18dp"
        app:boxStrokeColor="@color/color_secundary"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="30dp"
        app:hintTextColor="@color/color_secundary"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity2TieRepitaContra"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nextFocusDown="@id/activity2_btn_registrar"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:src="@mipmap/ic_miapp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/color_secundary"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity2TilNombre"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity2_btn_cancelar"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/btn_cancelar"
        android:textAlignment="center"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toStartOf="@id/activity2_btn_registrar"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10"
        app:layout_constraintTop_toBottomOf="@id/activity2TilRepitaContra"
        app:strokeColor="@color/color_secundary"

        app:strokeWidth="2dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity2_btn_registrar"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/btn_registrar"
        android:textAlignment="center"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@id/activity2_btn_cancelar"
        app:layout_constraintTop_toBottomOf="@id/activity2TilRepitaContra"
        app:strokeColor="@color/color_secundary"

        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>